# fastapivod

./: gel.toml  main.py  pyproject.toml  temp.py  test.sh  test_temp.py
.github/workflows/: ci.yml
app/: __init__.py
app/apis/v1/: meeting_router.py  participant_date_router.py  participant_router.py
app/configs/: base_config.py  tortoise_config.py
app/dtos/: create_meeting_response.py  create_participant_response.py  get_meeting_response.py
app/queries/meeting/: create_meeting_async.edgeql  create_meeting_async_async_edgeql.py
app/services/: meeting_service_edgedb.py  meeting_service_mysql.py
app/tests/apis/v1/: test_meeting_router_edgedb.py  test_meeting_router_mysql.py  test_participant_date_router_mysql.py  test_participant_router_mysql.py
app/tortoise_models/: meeting.py  participant.py  participant_date.py
app/utils/: base62.py  edge.py  geldb.py
dbschema/: default.gel
dbschema/migrations/: 00001-m1pjy2w.edgeql  00002-m15fnz5.edgeql  00003-m1qpd4l.edgeql  00004-m1fjtj6.edgeql
migrations/models/: 1_20260223103047_update.py  2_20260223175940_update.py  3_20260223210528_update.py
