[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["gumba <gumba6740@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.12.5"
orjson = "3.10.12"
annotated = "^0.0.2"
fastapi = "^0.129.0"
uvicorn = "^0.41.0"
gel = "^3.1.0"
cast = "^0.1.1"
asyncio = "^4.0.0"
httpx = "0.28.1"


[tool.poetry.group.dev.dependencies]
black = "24.10.0"
ruff = "0.8.2"
mypy = "1.13.0"
pytest = "8.3.4"
coverage = "7.6.9"
pytest-asyncio = "0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py313"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = 3.13
strict = true

[tool.coverage.run]
omit=["*/test_*.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"